# poetry_bug_repro

./: Dockerfile
dependency_project/: pyproject.toml  setup.py
poetry_project/: pyproject.toml
