[tool.poetry]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = ["Dominik Gresch <dominik.gresch@ansys.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dependency-project = {path = "../dependency_project"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
